# BreadKnife

./: Cargo.toml  README.md
.github/workflows/: preview-release.yml
src/: app.rs  bar.rs  daemon.rs  main.rs
src/bar/: control_center.rs  mod.rs  style.css  title.rs  workspace.rs  workspace.rs.bak
src/hyprland/: mod.rs
