[package]
name = "breadknife"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bread"
path = "src/main.rs"

[dependencies]
astal-tray = "0.1.0"
clap = { version = "4", features = ["derive"] }
gtk = { package = "gtk4", version = "0.10", features = ["v4_20"] }
gtk4-layer-shell = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "io-util", "sync", "net", "macros"] }
